--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>SeedApp</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
+<head>
+  <h1>cup to seed</h1>
+</head>
+<body>
     <%= yield %>
-  </body>
+</body>
 </html>
