--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <h1>cup to seed</h1>
+  <img src="https://hosting.photobucket.com/images/pp94/alliricker/SEED_TO_CUP_(2).png?width=960&height=720&fit=bounds" border="0" alt="SEED_TO_CUP_(2)"/>
 </head>
 <body>
     <%= yield %>
