--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,1 +1,4 @@
-<h2> welcome </h2>
+<div class="header">
+  <img class= "logo" src="https://hosting.photobucket.com/images/pp94/alliricker/eed_to_cup(1).png?width=590&height=370&fit=bounds" border="0" alt="eed_to_cup(1)"/>
+  <img class= "swingimage" src="https://hosting.photobucket.com/images/pp94/alliricker/coffee_plant.png?width=590&height=370&fit=bounds" border="0" alt="coffee_plant"/>
+</div>
