--- a/app/views/coffees/show.html.erb
+++ b/app/views/coffees/show.html.erb
@@ -1,4 +1,4 @@
 <h2> <%= @coffee.name %> </h2>
-<p> <%= @coffee.origin %> <p>
-<p> <%= @coffee.roast %> <p>
-<p> <%= @coffee.year %> <p>
+<p>Origin: <%= @coffee.origin %> </p>
+<p>Roast Level: <%= @coffee.roast %> </p>
+<p>Crop Year: <%= @coffee.year %> </p>
