--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,25 +10,28 @@
         padding-top: 60px;
         padding-bottom: 40px;
         font-family: 'Sanchez', serif;
+        text-align: left;
       }
 
       h1 {
-        text-align: left;
-        font-family: 'Sanchez', serif;
-        color: rgb(60,94,37);
-        
-      }
-
-      .h2 {
-        text-align: left;
-        font-family: 'Sanchez', serif;
         color: rgb(60,94,37);
       }
 
-      .p{
-        text-align: right;
-        font-family: 'Sanchez', serif;
+      h2 {
         color: rgb(60,94,37);
+      }
+
+      p{
+        color: rgb(60,94,37);
+      }
+
+      textarea, input {
+        text-align: left;
+        font-family: 'Sanchez', serif;
+        color: rgb(60,90,37);
+        box-sizing: border-box;
+        border: 1px solid rgb(60,94,37);
+        padding: 5px;
       }
 
        .header {
