--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,17 @@
         padding: 5px;
       }
 
+      label {
+        display: inline-block;
+        width: 80px;
+      }
+
+      .select {
+        font-family: 'Sanchez', serif;
+      }
+
+      
+
        .header {
          width: 100%;
          padding: 10px;
