fix review show next

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,9 @@
 <%= form_for @review do |f| %>
+<%= f.label :coffee, "Choose a Coffee:" %>
+<%= f.collection_select :coffee_id, Coffee.all, :id, :name %><br><br>
 <%= f.label :rating, "Rating:" %>
 <%= f.number_field :rating, min:0, max:5 %> <br><br>
-<%= f.label :notes, "Notes:" %>
-<%= f.text_area :notes %><br><br>
+<%= f.label :comment, "Comments:" %>
+<%= f.text_area :comment %><br><br>
 <%= f.submit %>
 <% end %>
