review show page

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,3 +1,4 @@
-<%= @coffee.name  %>
+<p> Your review had been submitted for: </p>
+<h2> <%= @coffee.name %></h2>
 <p> Rating: <%= @review.rating %> </p>
 <p> Comments: <%= @review.comment %> </p>
