--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,4 +1,4 @@
 <p> Your review had been submitted for: </p>
-<h2> <%= @coffee.name %></h2>
+<h2> <%= @review.coffee.name %></h2>
 <p> Rating: <%= @review.rating %> </p>
 <p> Comments: <%= @review.comment %> </p>
