--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -116,9 +116,10 @@
 
     <div class="topnav">
       <a href="/home">Home</a>
-      <a href="/users/new">Create Account</a>
       <a href="/coffees/new">Add a New Coffee</a>
       <a href="/coffees">All Coffees</a>
+      <a href="/reviews/new">Review a Coffee</a>
+      <a href="/signout">Log Out</a>
     </div>
   </body>
 
