--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -70,10 +70,9 @@
     <title>seed to cup</title>
     
     <div class="topnav">
-      <a class="active" href="/home">Home</a>
+      <a href="/signin">Sign In</a>
       <a href="/users/new">Create Account</a>
-      <a href="/coffees/new">Add a New Coffee</a>
-      <a href="/coffees">All Coffees</a>
+      <a href="/signout">Log Out</a>
     </div>
   </body>
 
