--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,3 +13,4 @@
 <%= f.text_field :title %> <br><br>
 <%= f.submit %></p>
 <% end %>
+<a href="/auth/google_oauth2" target="_blank"><img src="https://hosting.photobucket.com/images/pp94/alliricker/btn_google_signin_light_normal_web_2x.png?width=180&height=180&fit=bounds" border="0" alt="btn_google_signin_light_normal_web_2x"/></a>
