--- a/app/views/coffees/show.html.erb
+++ b/app/views/coffees/show.html.erb
@@ -2,6 +2,11 @@
 <p>Origin: <%= @coffee.origin.capitalize %> </p>
 <p>Roast Level: <%= @coffee.roast.capitalize %> </p>
 <p>Crop Year: <%= @coffee.year %> </p><br>
+<p>Roaster:</p>
+<% @coffee.roasters.each do |roaster| %>
+<p> Company: <%= roaster.name %> </p>
+<p> State: <%= roaster.state %> </p>
+<% end %>
 <h2>Average Rating: <%= @coffee.avg_rating %> </h2><br>
 <% @coffee.reviews.each do |review| %>
 <p>User: <%= link_to review.user.name, user_path(review.user.id) %></p>
@@ -9,4 +14,5 @@
 <p>Comment: <%= review.comment %><p>
 
 <% end %>
+
 <%= link_to "Review Coffees", new_review_path(@review) %>
