need to fix routing

--- a/app/views/coffees/new.html.erb
+++ b/app/views/coffees/new.html.erb
@@ -11,10 +11,10 @@
 <%= f.text_field :year %> <br><br>
 <h3> Roaster: </h3>
 <%= f.fields_for :roasters do |roaster| %>
-   <%= roaster.label :name %>
-   <%= roaster.text_field :name %> <br>
-   <%= roaster.label :state %>
-   <%= roaster.text_field :state%> <br>
-   <% end %>
+   <%= roaster.label :name, "Name:"%>
+   <%= roaster.text_field :name %> <br><br>
+   <%= roaster.label :state, "State:" %>
+   <%= roaster.select(:state, options_for_select(us_states, "CA")) %> <br>
+   <% end %><br><br>
 <%= f.submit %>
 <% end %>
