--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,19 +13,11 @@
         text-align: left;
       }
 
-      h1 {
+      h1, h2, h3, h4, p {
         color: rgb(60,94,37);
       }
 
-      h2 {
-        color: rgb(60,94,37);
-      }
-
-      p{
-        color: rgb(60,94,37);
-      }
-
-      textarea, input {
+      textarea, input, select {
         text-align: left;
         font-family: 'Sanchez', serif;
         color: rgb(60,90,37);
@@ -39,11 +31,12 @@
         width: 80px;
       }
 
-      .select {
+     form {
         font-family: 'Sanchez', serif;
-      }
-
-      
+        text-align: left;
+        color: rgb(60,90,37);
+     
+      }    
 
        .header {
          width: 100%;
