--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,6 @@
 <%= form_for @review do |f| %>
+<%= f.label :coffee, "Coffee:" %>
+<%= f.collection_select(:coffee_id, Coffee.all, :id, :name, {prompt: "Select A Coffee"}) %><br><br>
 <%= f.label :rating, "Rating:" %>
 <%= f.number_field :rating, min:0, max:5 %> <br><br>
 <%= f.label :comment, "Comments:" %>
