--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,9 +108,9 @@
     </header>
 
     <div class="topnav">
-      <a href="/coffees/new">Add a New Coffee</a>
-      <a href="/coffees">All Coffees</a>
-      <a href="/reviews/new">Review a Coffee</a>
+      <a href="/coffees/new">New Coffee</a>
+      <a href="/coffees">All Coffee</a>
+      <a href="/reviews/new">Review Coffee</a>
       <a href="/signout">Log Out</a>
     </div>
   </body>
