--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,6 +101,11 @@
     </style>
   </head>
   <body>
+
+  <% flash.each do |key, message| %>
+  <p><%= message %></p>
+   <% end %>
+   
     <title>seed to cup</title>
 
     <header>
@@ -108,6 +113,7 @@
     </header>
 
     <div class="topnav">
+      <a href="/home">Home</a>
       <a href="/coffees/new">New Coffee</a>
       <a href="/coffees">All Coffee</a>
       <a href="/reviews/new">Review Coffee</a>
