--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -3,7 +3,7 @@
 <%= f.collection_select(:coffee_id, Coffee.all, :id, :name, {prompt: "Select A Coffee"}) %><br><br>
 <%= f.label :rating, "Rating:" %>
 <%= f.number_field :rating, min:0, max:5 %> <br><br>
-<%= f.label :comment, "Comments:" %>
+<%= f.label :comment, "Comments:" %><br>
 <%= f.text_area :comment %><br><br>
 <%= f.submit %>
 <% end %>
